--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,9 @@ body {
     padding: 15px 30px;
     border-radius: 50px 0 0 50px; 
     border: 0;
+    margin-left: 0px;
 }
 .newslatter-input{
+    
     
 }
