--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,6 @@
-/* common style */
-* {
-    margin: 0 30px;
-}
-
 body {
     font-family: 'Merriweather', serif;
+    margin: 0 110px;
 }
 
 /* banner er style */
@@ -33,20 +29,18 @@ body {
 .off {
     margin-top: 120px;
 }
-
 .off-title {
     text-align: center;
 }
-
 .off-title>h1 {
     color: #FF0000;
     font-size: 80px;
     margin-bottom: 30px;
 }
-
 .off-title>p {
     color: #FF0000;
     font-size: 20px;
+    margin: 0;
 }
 
 .off-title>h5 {
@@ -70,18 +64,16 @@ body {
     margin-top: 80px;
     text-align: center;
     padding: 60px 200px;
-    /* margin-right: 30px;
-    margin-left: 30px; */
 }
+
 .newsletter>h4 {
     font-style: bold;
     font-size: 40px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .newsletter>p{
     color: rgba(7, 2, 17, 0.60);
-    margin-top: 22px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 .btn-sub{
     background-color: #FF0000;
@@ -97,6 +89,6 @@ body {
     margin-left: 0px;
 }
 .newslatter-input{
-    
-    
+    gap: 0; 
+    margin: 0px;
 }
