footer link add

--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,10 @@ footer{
 }
 .footer-center{
     text-align: center;
-
+}
+.footer-center a>img{
+    width: 30px;
+    height:30px;
 }
 .footer-bottom{
     display: flex;
