--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: 'Merriweather', serif;
-    margin: 0 110px;
 }
-
+*{
+    margin: 0;
+}
 /* banner er style */
 .banner {
+    margin: 0 110px;
     background-image: url('../ascet/banner-image.png');
     background-position: center;
     background-size: cover;
@@ -27,7 +29,7 @@ body {
 
 /* main section styles */
 .off {
-    margin-top: 120px;
+    margin:120px 110px 80px 110px;
 }
 .off-title {
     text-align: center;
@@ -57,7 +59,8 @@ body {
 /* newsletter section */
 .newsletter {
     background: rgba(255, 0, 0, 0.05);
-    margin-top: 80px;
+    /* margin-top: 80px; */
+    margin: 0 110px;
     text-align: center;
     padding: 60px 200px;
 }
@@ -93,13 +96,20 @@ footer{
     color:white ;
     font-size: 14px;
     margin-top: 50px;
+    padding:80px 100px;
 }
 .footer-top{
     display: flex;
     justify-content: space-between;
+    padding: 20px;
+}
+.footer-top-inline{
+    display: flex;
+    gap: 10px;
 }
 .footer-center{
     text-align: center;
+    padding: 20px;
 }
 .footer-center a>img{
     width: 30px;
@@ -107,5 +117,6 @@ footer{
 }
 .footer-bottom{
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    padding: 20px;  
 }
