--- a/styles/style.css
+++ b/styles/style.css
@@ -13,15 +13,12 @@ body {
     color: white;
     border-radius: 16px;
 }
-
 .banner-title>h1 {
     font-size: 50px;
 }
-
 .banner-title>p {
     font-size: 20px;
 }
-
 .banner-title {
     padding: 150px 50px 210px 50px;
     text-align: center;
@@ -71,16 +68,14 @@ body {
 /* newsletter section */
 .newsletter {
     background: rgba(255, 0, 0, 0.05);
-    /* margin-top: 80px; */
     margin: 0 110px;
     text-align: center;
     padding: 60px 200px;
 }
-
 .newsletter>h4 {
     font-style: bold;
     font-size: 40px;
-    /* margin-top: 30px; */
+    padding: 15px 0;
 }
 .newsletter>p{
     color: rgba(7, 2, 17, 0.60);
@@ -97,10 +92,10 @@ body {
     padding: 15px 30px;
     border-radius: 50px 0 0 50px; 
     border: 0;
-    margin-left: 0px;
 }
-.newslatter-input{
-    gap: 0; 
+.newslatter-inputt{
+    display: flex;
+    gap:0;
 }
 /* footer style */
 footer{
