--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ body {
 }
 .best-gift .red{
     color: #FF0000;
+    font-size:20px ;
 }
 .best-gift h3{
     font-size: 25px;
@@ -64,6 +65,16 @@ body {
 .best-gift p{
     font-size: 15px;
     color: rgba(7, 2, 17, 0.60);
+}
+.Photo-grid{
+    display: grid;
+    grid-template-columns: 40% 40% 40%;
+    column-gap:20px;
+    margin: 20px 0 80px;
+}
+.photo{
+    width: 50px;
+    height: 40px;
 }
 /* newsletter section */
 .newsletter {
