--- a/styles/style.css
+++ b/styles/style.css
@@ -69,13 +69,10 @@ body {
 .Photo-grid{
     display: grid;
     grid-template-columns: 40% 40% 40%;
-    column-gap:20px;
+    gap:10px;
     margin: 20px 0 80px;
 }
-.photo{
-    width: 50px;
-    height: 40px;
-}
+
 /* newsletter section */
 .newsletter {
     background: rgba(255, 0, 0, 0.05);
