--- a/styles/style.css
+++ b/styles/style.css
@@ -69,8 +69,12 @@ body {
 .Photo-grid{
     display: grid;
     grid-template-columns: 30% 30% 30%;
-    gap:10px;
+    column-gap: 10px;
+    row-gap: 15px;
     margin: 20px 0 80px;
+}
+.Photo-grid img:hover{
+    transform:scale(1.1);
 }
 
 /* newsletter section */
